[tool.poetry]
name = "gcp-sandbox"
version = "0.1.0"
description = ""
authors = ["arai <niimaru09@gmail.com>"]
readme = "README.md"
# packages = [{include = "gcp_sandbox"}]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-bigquery = "^3.4.0"
functions-framework = "^3.2.1"
google-cloud-storage = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
